MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/KYC_Response__c.object-meta.xml
<CustomObject>
    <label>KYC Response</label>
    <nameField>
        <displayFormat>KYC-{0000}</displayFormat>
        <label>KYC Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>