MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Account_Number_associate_With_Trade_LIC__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_associate_With_Trade_LIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number associate With Trade LIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>