MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/amlCheckResult__c.field-meta.xml
<CustomField>
    <fullName>amlCheckResult__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>amlCheckResult</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>