MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Cham_M_Number__c.field-meta.xml
<CustomField>
    <fullName>Cham_M_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cham M Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>