MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Company_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_File_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>