MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Company_MobileNumberTRD__c.field-meta.xml
<CustomField>
    <fullName>Company_MobileNumberTRD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company MobileNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>