MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYC Response</relationshipLabel>
    <relationshipName>KYC_Response</relationshipName>
    <type>Lookup</type>
</CustomField>