MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>