MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KYC Response</relationshipLabel>
    <relationshipName>KYC_Response</relationshipName>
    <type>Lookup</type>
</CustomField>