MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Customer_LastName__c.field-meta.xml
<CustomField>
    <fullName>Customer_LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>