MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/D_B_D_U_N_S_number__c.field-meta.xml
<CustomField>
    <fullName>D_B_D_U_N_S_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>D&amp;B D-U-N-S number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>