MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>