MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Document_1_Message__c.field-meta.xml
<CustomField>
    <fullName>Document_1_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document 1 Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>