MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>