MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/DocuSign_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if a reminder email of signing the KYC DocuSign has already been sent to the customer or not.</description>
    <label>DocuSign Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>