MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Dual_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Dual_Citizen__c</fullName>
    <label>Do you hold dual nationality?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>