MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/EID_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>EID_Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Issue Date</label>
    <type>Date</type>
</CustomField>