MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/EID_Issue_Emirates_Arabic__c.field-meta.xml
<CustomField>
    <fullName>EID_Issue_Emirates_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Issue Emirates (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>