MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/EID_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>EID_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>