MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/EID_Years_Since_Issue__c.field-meta.xml
<CustomField>
    <fullName>EID_Years_Since_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EID Years Since Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>