MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Established_Card_Number_MOHRE__c.field-meta.xml
<CustomField>
    <fullName>Established_Card_Number_MOHRE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Established Card Number (MOHRE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>