MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Establishment Date</label>
    <type>Date</type>
</CustomField>