MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/ExpCloud_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>ExpCloud_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if a reminder email of completing the Experience Cloud has already been sent to the customer or not.</description>
    <label>ExpCloud Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>