MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>