MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Floor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>