MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Full_Journey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Full_Journey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full_Journey_Completed</label>
    <type>Checkbox</type>
</CustomField>