MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>