MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Identity_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unified Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>