MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Is_Golden_Visa_Holder__c.field-meta.xml
<CustomField>
    <fullName>Is_Golden_Visa_Holder__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(EID_Issue_Date__c)),
    NOT(ISBLANK(EID_Expiry_Date__c)),
    EID_Expiry_Date__c &gt;= ADDMONTHS(EID_Issue_Date__c, 60)
  ),
  &quot;Yes&quot;,
  &quot;No&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Golden Visa Holder</label>
    <type>Text</type>
</CustomField>