MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Is_Politically_Exposed__c.field-meta.xml
<CustomField>
    <fullName>Is_Politically_Exposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Politically Exposed</label>
    <type>Checkbox</type>
</CustomField>