MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/KYC_Send_By__c.field-meta.xml
<CustomField>
    <fullName>KYC_Send_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC Send By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC_Response1</relationshipName>
    <type>Lookup</type>
</CustomField>