MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/KYC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC Start Date</label>
    <type>Date</type>
</CustomField>