MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/License_Partners__c.field-meta.xml
<CustomField>
    <fullName>License_Partners__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Partners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>