MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>