MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Name_in_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>