MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Nationality_Code__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nationality Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>