MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Other_Nationality_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Other_Nationality_If_Applicable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Nationality? If Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>