MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Other_Source_Of_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Of_Income__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Source Of Income</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>