MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Parent_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>