MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>