MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Premises_Number__c.field-meta.xml
<CustomField>
    <fullName>Premises_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premises Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>