MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Register_Number_of_the_Company__c.field-meta.xml
<CustomField>
    <fullName>Register_Number_of_the_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Register Number of the Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>