MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Resident_Emirates__c.field-meta.xml
<CustomField>
    <fullName>Resident_Emirates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resident Emirates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>