MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Resident_Status__c</fullName>
    <label>Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>