MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Residential_Country__c.field-meta.xml
<CustomField>
    <fullName>Residential_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residential Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>