MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <description>This field will hold the URL required to resume the KYC journey.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resume Link</label>
    <type>Url</type>
</CustomField>