MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>