MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Selfied_Analysis_Message__c.field-meta.xml
<CustomField>
    <fullName>Selfied_Analysis_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Selfied Analysis Message</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>