MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Selfied_Analysis_Verified__c.field-meta.xml
<CustomField>
    <fullName>Selfied_Analysis_Verified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Selfied Analysis Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>