MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Signzy_Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>Signzy_Journey_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signzy Journey ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>