MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Signzy_Journey_Message__c.field-meta.xml
<CustomField>
    <fullName>Signzy_Journey_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signzy Journey Message</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>