MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Signzy_Step__c.field-meta.xml
<CustomField>
    <fullName>Signzy_Step__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signzy Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>