MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/SignzyURL__c.field-meta.xml
<CustomField>
    <fullName>SignzyURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SignzyURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>