MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Income__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>