MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>