MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/The_Dubai_Chamber_Number__c.field-meta.xml
<CustomField>
    <fullName>The_Dubai_Chamber_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>The Dubai Chamber Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>