MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Trade_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>