MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Type_of_the_License__c.field-meta.xml
<CustomField>
    <fullName>Type_of_the_License__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of the License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>