MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>