MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/recordTypes/Corporate_KYC.recordType-meta.xml
<RecordType>
    <fullName>Corporate_KYC</fullName>
    <active>true</active>
    <label>Corporate KYC</label>
</RecordType>