MODON MRE BPDEV/force-app/main/default/objects/KYC_Response__c/recordTypes/Individual_KYC.recordType-meta.xml
<RecordType>
    <fullName>Individual_KYC</fullName>
    <active>true</active>
    <label>Individual KYC</label>
</RecordType>